--- a/travelapp/package.json
+++ b/travelapp/package.json
@@ -23,7 +23,9 @@
     "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^19.1.8",
+    "typescript": "^5.8.3"
   },
   "private": true
 }
